eks/logging/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      serviceAccountName: elasticsearch-service-account
      containers:
        - name: elasticsearch
          image: elasticsearch:8.15.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elastic-data
      volumes:
        - name: elastic-data
          emptyDir:
            sizeLimit: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: elasticsearch
      port: 9200
      protocol: TCP
      targetPort: 9200
    - name: elasticsearch-ssl
      port: 9300
      protocol: TCP
      targetPort: 9300
  type: ClusterIP
