eks/logging/fluentd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1.17-debian-elasticsearch7-1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 24224
          volumeMounts:
            - name: config
              mountPath: /fluentd/etc/
      volumes:
        - name: config
          configMap:
            name: fluentd-config

---
apiVersion: v1
kind: Service
metadata:
  name: fluentd
  namespace: logging
spec:
  ports:
    - port: 24224
      targetPort: 24224
  selector:
    app: fluentd
