eks/logging/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:7.17.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5601
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana-svc
  namespace: logging
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
    protocol: TCP
    nodePort: 30561
  type: LoadBalancer
