eks/logging/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-ports: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
  labels:
    name: kibana-ingress
spec:
  ingressClassName: "alb-ingress-class"
  rules:
    - host: kibana.joon-test.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601

  tls:
    - hosts:
        - kibana.joon-test.shop
      secretName: kibana-tls-secret
